Added tests for play-type=adsr-wave-1 and play-type=adsr-wave-2.

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -171,6 +171,26 @@ artscompressor-test:
 	$(BSEFCOMPARE) $(srcdir)/artscompressor.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
+# a test for play-type=adsr-wave-1
+FEATURE_TESTS += adsr-wave-1-test
+EXTRA_DIST += adsr-wave-1-test.bse adsr-wave-1-test.ref
+adsr-wave-1-test:
+	$(BSE2WAV) $(srcdir)/adsr-wave-1-test.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy --end-time  > $(@F).tmp
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy --end-time >> $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/adsr-wave-1-test.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
+# a test for play-type=adsr-wave-2
+FEATURE_TESTS += adsr-wave-2-test
+EXTRA_DIST += adsr-wave-2-test.bse adsr-wave-2-test.ref
+adsr-wave-2-test:
+	$(BSE2WAV) $(srcdir)/adsr-wave-2-test.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy --end-time  > $(@F).tmp
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy --end-time >> $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/adsr-wave-2-test.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
 # the BEAST demo song
 FEATURE_TESTS += partymonster-test
 EXTRA_DIST += partymonster.ref
