Move AlignedArray to Birnet public API.
* move class from Bse::Resampler to Birnet namespace
* minor refactoring (unsigned int -> size_t)
* added test for AlignedArray

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -35,3 +35,6 @@ sorting_LDADD	 = $(progs_ldadd)
 TESTS		+= datalist
 datalist_SOURCES = datalist.cc
 datalist_LDADD	 = $(progs_ldadd)
+TESTS		+= utils
+utils_SOURCES    = utils.cc
+utils_LDADD	 = $(progs_ldadd)
