--- a/configure.in
+++ b/configure.in
@@ -15,13 +15,11 @@ AC_PREREQ(2.57)
 #
 # BSE version numbers
 #
-AC_DIVERT_BEFORE_HELP([
 BSE_MAJOR_VERSION=0
 BSE_MINOR_VERSION=7
 BSE_MICRO_VERSION=2
 BSE_INTERFACE_AGE=0
 BSE_BINARY_AGE=0
-])
 dnl#
 dnl# Making releases:
 dnl#   BSE_MICRO_VERSION += 1;
@@ -62,13 +60,11 @@ AC_SUBST(LT_AGE)
 
 dnl # figure debugging default, prior to $ac_help setup
 dnl
-AC_DIVERT_BEFORE_HELP([
 if test `expr $BSE_MINOR_VERSION \% 2 \| $BSE_MAJOR_VERSION \< 1` = 1 ; then
         debug_default=yes
 else
         debug_default=minimum
 fi
-])
 
 # architecture information
 AC_CANONICAL_TARGET
@@ -85,9 +81,9 @@ AC_PROG_MAKE_SET
 AM_MAINTAINER_MODE
 
 # declare --enable-* args and collect ac_help strings
-AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
-AC_ARG_ENABLE(toyprof,     [  --enable-toyprof=[no/yes]       turn on toy profiler, see sfi/toyprof.README],,)
-AC_ARG_WITH(doxer,         [  --with-doxer=[no/yes]           build documentation with doxer documentation tool], [DOXRULE=''], [DOXRULE='#'])
+AC_ARG_ENABLE(debug,           [  --enable-debug=no/minimum/yes  turn on debugging],,enable_debug=$debug_default)
+AC_ARG_ENABLE(toyprof,         [  --enable-toyprof               turn on toy profiler, see sfi/toyprof.README],,)
+AC_ARG_WITH(doxer,             [  --with-doxer=[no/yes]          build documentation with doxer documentation tool], [DOXRULE=''], [DOXRULE='#'])
 AC_SUBST(DOXRULE)
 
 dnl # setup DEBUG defaults
