--- a/configure.in
+++ b/configure.in
@@ -83,8 +83,14 @@ AM_MAINTAINER_MODE
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,           [  --enable-debug=no/minimum/yes  turn on debugging],,enable_debug=$debug_default)
 AC_ARG_ENABLE(toyprof,         [  --enable-toyprof               turn on toy profiler, see sfi/toyprof.README],,)
+AC_ARG_ENABLE(distcheck-tests, [  --enable-distcheck-tests       turn on resource and time consuming distcheck tests],,enable_distcheck_tests=no)
 AC_ARG_WITH(doxer,             [  --with-doxer=[no/yes]          build documentation with doxer documentation tool], [DOXRULE=''], [DOXRULE='#'])
 AC_SUBST(DOXRULE)
+
+# BEAST_BUILD configuration
+BEAST_BUILD="$BEAST_BUILD"
+test "$enable_distcheck_tests" = yes && BEAST_BUILD=":distcheck-tests:$BEAST_BUILD"
+AC_SUBST(BEAST_BUILD)
 
 dnl # setup DEBUG defaults
 if test "x$enable_debug" = "xyes"; then
