--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@ builtin(include, birnet/acbirnet.m4)dnl
 #
 # Configure script for BEAST/BSE
 #
-AC_INIT
+AC_INIT(beast, m4_esyscmd(./mkrelease.sh shellvar configure.in:BST_VERSION))
 AC_CONFIG_SRCDIR([bse/bseconfig.h.in])
 AM_CONFIG_HEADER(configure.h)
 AC_PREREQ(2.57)
@@ -72,7 +72,7 @@ dnl # AC_CANONICAL_HOST is provided by AC_CANONICAL_TARGET
 AC_DEFINE_UNQUOTED(BST_ARCH_NAME, "$target", [Architecture Description])
 
 # initialize automake, don't define PACKAGE and VERSION
-AM_INIT_AUTOMAKE(beast, $BST_VERSION, no-define)
+AM_INIT_AUTOMAKE
 
 # We have subdirectories.
 AC_PROG_MAKE_SET
