--- a/configure.in
+++ b/configure.in
@@ -203,6 +203,8 @@ AC_DEFUN([AC_I18N_REQUIREMENTS],
   AC_PATH_PROG(MSGFMT, msgfmt, msgfmt)
   AC_PATH_PROG(MSGMERGE, msgmerge, msgmerge)
   AC_PATH_PROG(XGETTEXT, xgettext, xgettext)
+  INTLMERGE='$(abs_top_srcdir)/autotools/intltool-merge'
+  AC_SUBST(INTLMERGE) dnl # AC_PATH_PROG(INTLMERGE, intltool-merge, intltool-merge)
 ])
 AC_DEFUN([AC_SFI_REQUIREMENTS],
 [
