PO: migrated translation support to Makefile.am
	* po/Makefile.am: provide rules to build/install/uninstall translation
	catalogs. Check for unlisted tranlatable files. Provide update-po
	and pot-file build rules. Support XML, scm, keys, desktop, IDL,
	proc and C/C++ source files.

	* Makefile.am: beautified make output via echo and printf.
	Use make function definitions to simplify adding new source file
	types.

	* po/LINGUAS: list of supported languages.

	* po/POTSCAN: list of project sources with translations.

	* po/POTSKIP: list of translatable project sources to skip.

	* po/POTIGNORE: ERE patterns of project sources to ignore.

	* autotools/intlfix-las.awk: script to prepare I18N strings in
	line-based assignment files (keys, desktop, INI) for extraction.

	* autotools/intlfix-scm.sed: script to prepare I18N strings in
	scheme source files for extraction.

	* autotools/intlfix-xml.awk: script to prepare I18N nodes and
	attribute values for extraction.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,8 @@ SUBDIRS = . data birnet sfi bse plugins shell beast-gtk launchers library tools 
 noinst_DATA =
 
 # require automake 1.9
-AUTOMAKE_OPTIONS = 1.9 dist-bzip2 no-dist-gzip
+AUTOMAKE_OPTIONS = 1.9 dist-bzip2 no-dist-gzip -Wno-portability
+ACLOCAL_AMFLAGS = -I autotools
 
 site site-preview site-update site-update-all site-update-pages site-update-galleries:
 	@$(MAKE) -C web/ $(AM_MAKEFLAGS) $@
@@ -18,20 +19,13 @@ site site-preview site-update site-update-all site-update-pages site-update-gall
 configure: birnet/acbirnet.m4 birnet/configure.inc
 
 CLEANFILES += $(strip		\
-	intltool-extract	\
-	intltool-merge		\
-	intltool-update		\
 )
 
 EXTRA_DIST += $(strip		\
 	TODO			\
 	COPYING.GPL		\
 	COPYING.LGPL		\
-	po-helper.sh.in		\
 	topconfig.h		\
-	intltool-extract.in     \
-	intltool-merge.in       \
-	intltool-update.in	\
 )
 
 # check: message
